--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@cosmjs/tendermint-rpc": "^0.26.0",
     "@cosmjs/utils": "^0.26.0",
     "ajv": "7.1.1",
-    "axios": "0.21.1",
+    "axios": "^0.22.0",
     "commander": "7.1.0",
     "fast-safe-stringify": "2.0.4",
     "js-yaml": "4.0.0",
